Use beta.mybinder

--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,9 @@
 name: xtensor
 channels:
   - nodefaults
+  - defaults
   - conda-forge
-  - SylvainCorlay
+  - QuantStack
 dependencies:
-  - cling_ubuntu14
   - xtensor
+  - xeus-cling
